# google-genmedia-mcp

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
.claude/skills/update-models/: SKILL.md
docs/: MODELS.md  SETUP.md  TOOLS.md
src/google_genmedia_mcp/auth/: manager.py  oauth.py
src/google_genmedia_mcp/core/: client.py  errors.py  models.py
src/google_genmedia_mcp/mcp/: server.py
src/google_genmedia_mcp/mcp/tools/: _utils.py  avtool.py  chirp.py  image.py  image_edit.py  lyria.py  server_info.py  veo.py
src/google_genmedia_mcp/services/: avtool.py  chirp.py  gemini_image.py  imagen.py  imagen_edit.py  lyria.py  service.py  storage.py  veo.py
src/google_genmedia_mcp/utils/: config.py
tests/: test_auth.py  test_config.py  test_models.py  test_services.py  test_storage.py  test_tools.py
